fix small overflow in home

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1068,7 +1068,7 @@ button,
 	}
 	#latest-post h2.button {
 		top: 10rem;
-		right: -6.5rem;
+		right: -6rem;
 		transform: rotate(82deg);
 	}
 }
